cleancode pw reset

--- a/src/app/landingpage/login/password-reset/password-reset.component.html
+++ b/src/app/landingpage/login/password-reset/password-reset.component.html
@@ -15,16 +15,6 @@
                 <input [type]="passwordFieldType" [(ngModel)]="password" placeholder="Enter a password" name="firstPassword" #firstPassword="ngModel" required class="passwordInput">
                 <img src="../../assets/img/blue_eye.svg" alt="eye image" (click)="togglePasswordVisibility()">
             </div>
-            <!-- @if (!checkPassword() &&firstPassword.touched) {
-                <div class="invalidFeedback">
-                    @if (password == ''){
-                        <span><img src="../../../../assets/img/warning.svg" alt="allertImg">Password is required</span>
-                    } @else if(!checkPassword()) {
-                        <span><img src="../../../../assets/img/warning.svg" alt="allertImg">Password should have at least 5 characters</span>
-                    } 
-                </div>
-            } -->
-
             <!----Confirm Password------>
             <div class="passwortImg">
                 <input [type]="confirmPasswordFieldType" [(ngModel)]="confirm_password" placeholder="Confirm Password" name="confirmPassword" #confirmPassword="ngModel" required class="passwordInput">
@@ -49,7 +39,7 @@
         <button type="submit" class="submitBtn" [ngClass]="{'submitBtn': checkAllInputs(), 'submitBtnDisabled': !checkAllInputs()}" [disabled]="!checkAllInputs()">Reset my password</button>
     </form>  }
 
-        <!-- password wurde gesendet container -->
+        <!-- Password succes change -->
         @if (passwordSent) {
             <div class="successMessage">
                 <h1>Password Reset Successful</h1>
