cleancode footer and emailExist

--- a/src/app/landingpage/login/register/email-exists/email-exists.component.html
+++ b/src/app/landingpage/login/register/email-exists/email-exists.component.html
@@ -13,7 +13,7 @@
     </div>
   
     <footer>
-      <span [routerLink]="['/privacy_policy']">Datenschutz</span>
-      <span [routerLink]="['/imprint']">Impressum</span>
+      <span [routerLink]="['/privacy_policy']">Privacy policy</span>
+      <span [routerLink]="['/imprint']">Imprint</span>
     </footer>
   </section>
