--- a/src/app/shared/login/footer/footer.component.html
+++ b/src/app/shared/login/footer/footer.component.html
@@ -1,6 +1,6 @@
 
 <div class="footer">
-    <span [routerLink]="['/privacy_policy']">Datenschutz</span>
-    <span [routerLink]="['/imprint']">Impressum</span>
+    <span [routerLink]="['/privacy_policy']">Privacy Policy</span>
+    <span [routerLink]="['/imprint']">Imprint</span>
 </div>
 
