cleancode registration-confirm

--- a/src/app/landingpage/login/register/registration-confirmation/registration-confirmation.component.html
+++ b/src/app/landingpage/login/register/registration-confirmation/registration-confirmation.component.html
@@ -4,8 +4,8 @@
   <div class="textDiv">
     <p>
       Dear <b>{{ userService.user_name }}</b>, 
-      plieace go to yourt email <b>{{ userService.user_email_copy }}</b> inbox and click on recieved
-      activation link ro confirm and complete your registration.<br>
+      Please go to your email inbox <b>{{ userService.user_email_copy }}</b>  and click on the received
+      activation link to confirm and complete your registration.<br>
       <b>Note:</b> Check your spam folder!
     </p>
 
