--- a/src/app/landingpage/login/login.component.html
+++ b/src/app/landingpage/login/login.component.html
@@ -37,13 +37,13 @@
                     <span>Remember me 
                         <img src="../../../../assets/icons/icons-help.png" alt="icon-question-mark"
                         (mouseenter)="shwoQuestionWindow()" (mouseleave)="shwoQuestionWindow()">
-                        <div class="questionDiv" [ngClass]="{'shwoQ-Div': shwoQesttionDiv ,'hideQ-Div' : !shwoQesttionDiv }">Remember me does not work on gest login.</div>
+                        <div class="questionDiv" [ngClass]="{'shwoQ-Div': shwoQesttionDiv ,'hideQ-Div' : !shwoQesttionDiv }">Remember me does not work on Guest login.</div>
                     </span>
                 } @else {
                     <span>Remember me 
                         <img src="../../../../assets/icons/icons-help.png" alt="icon-question-mark"
                         (click)="shwoQuestionWindow()">
-                        <div class="questionDiv" [ngClass]="{'shwoQ-Div': shwoQesttionDiv ,'hideQ-Div' : !shwoQesttionDiv }">Remember me does not work on gest login.</div>
+                        <div class="questionDiv" [ngClass]="{'shwoQ-Div': shwoQesttionDiv ,'hideQ-Div' : !shwoQesttionDiv }">Remember me does not work on Guest login.</div>
                     </span>
                 }
             </div>
