--- a/src/app/landingpage/landingpage.component.html
+++ b/src/app/landingpage/landingpage.component.html
@@ -1,14 +1,9 @@
 <section>
-    <!-- <div class="headerDiv">
-        <img src="../../../assets/img/Logo.svg" alt="Logo">
-        <button [routerLink]="['/login']">Log in</button>
-    </div> -->
     <app-header [showImage]="true"></app-header>
-
     <div class="contentDiv">
-        <h1>Movies, TV shwos and more</h1>
-        <h2>Watch whenever you want wherever you want</h2>
-        <span>Enter yopur email to create your membership</span>
+        <h1>Movies, TV shows and more</h1>
+        <h2>Watch whenever you want, wherever you want</h2>
+        <span>Enter your email to create your membership</span>
         <div class="inputBox">
             <input type="email" [(ngModel)]="userService.user_email" placeholder="Email Adress">
             <button [routerLink]="['/register']">Sing up <img src="../../assets/img/white_arrow_right.svg" alt=""></button>
@@ -16,7 +11,7 @@
     </div>
 
     <footer>
-        <span [routerLink]="['/privacy_policy']">Datenschutz</span>
-        <span [routerLink]="['/imprint']">Impressum</span>
+        <span [routerLink]="['/privacy_policy']">Privacy Policy</span>
+        <span [routerLink]="['/imprint']">Imprint</span>
     </footer>
 </section>
