--- a/src/app/landingpage/video-site/video-category/video-category.component.scss
+++ b/src/app/landingpage/video-site/video-category/video-category.component.scss
@@ -1,142 +1,136 @@
-@import './../../../../styles.scss';
+@import "./../../../../styles.scss";
 
-section{
-    width: 100%;
-    height: auto;
-    background: linear-gradient(to bottom, 
-    #0F1F26 3%,
-    #060606 16%,
-    #060606 100% 
-);
+section {
+  width: 100%;
+  height: auto;
+  background: linear-gradient(to bottom, #0f1f26 3%, #060606 16%, #060606 100%);
 }
 .videoPlayerBox {
-    @include dFlex();
+  @include dFlex();
+  width: 100%;
+  height: 80dvh;
+  position: absolute;
+  flex-direction: column;
+  top: 0;
+  right: 0;
+  object-fit: cover;
+  overflow: hidden;
+  .backgroundVideo {
     width: 100%;
-    height: 80dvh;
-    position: absolute;
-    flex-direction: column;
-    top: 0;
-    right: 0;
+    height: 100%;
     object-fit: cover;
-    overflow: hidden;
-    .backgroundVideo {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
-    .shadow {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        box-shadow: inset 0px -62px 80px 0px rgba(0, 0, 0, 0.80);
-        top: 0;
-        left: 0;
-        z-index: 1;
-    }
+  }
+  .shadow {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    box-shadow: inset 0px -62px 80px 0px rgba(0, 0, 0, 0.8);
+    top: 0;
+    left: 0;
+    z-index: 1;
+  }
 }
 
 .videoDiv {
-    height: calc(100dvh - 80px);
-    margin-top: 80px;
-    padding-left: 6rem;
+  height: calc(100dvh - 80px);
+  margin-top: 80px;
+  padding-left: 6rem;
 
-    .videoDiv2 {
-        position: absolute;
-        overflow-x: hidden;
-        width: calc(100% - 120px);
+  .videoDiv2 {
+    position: absolute;
+    overflow-x: hidden;
+    width: calc(100% - 120px);
 
-        .videoPosition {
-            color: whitesmoke;
-            width: 100%;
+    .videoPosition {
+      color: whitesmoke;
+      width: 100%;
 
-            .video4LoopContainer {
-                position: relative;
-                width: 100%;
+      .video4LoopContainer {
+        position: relative;
+        width: 100%;
 
-                .video4LoopBox {
-                    display: flex;
-                    gap: 1em;
-                    width: 100%;
-                    overflow-x: auto;
-                    overflow-y: hidden;
-                    scroll-behavior: smooth;
-                    align-items: center;
-                    
-                    // einkommentieren wenn man fest größe habe will 
-                    // & > app-video-preview {
-                    //     flex: 0 0 auto;  // Stelle sicher, dass die Größe der Elemente nicht vom gap beeinflusst wird
-                    //     min-width: 160px; 
-                    //     // min-height: 90px; 
-                    //     max-width: 240px;
-                    //     aspect-ratio: 16/9;
-                    // }
-                    
-                    &::-webkit-scrollbar {
-                        height: 4px;
-                    }
+        .video4LoopBox {
+          display: flex;
+          gap: 1em;
+          width: 100%;
+          overflow-x: auto;
+          overflow-y: hidden;
+          scroll-behavior: smooth;
+          align-items: center;
+          &::-webkit-scrollbar {
+            height: 4px;
+          }
 
-                    &::-webkit-scrollbar-thumb {
-                        background-color: #7810FF;
-                        border-radius: 2px;
-                    }
+          &::-webkit-scrollbar-thumb {
+            background-color: #7810ff;
+            border-radius: 2px;
+          }
 
-                    &::-webkit-scrollbar-track {
-                        background-color: transparent;
-                    }
-                }
-
-                .arrowLeft {
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    width: 4rem;
-                    height: 100%;
-                    @include dFlex();
-                    z-index: 2;
-                    background: linear-gradient(to right, #000000 0%, rgba(30, 30, 30, 0) 100%);
-
-                    button {
-                        background: none;
-                        border: none;
-                        cursor: pointer;
-                        transition: .2s all ease-in-out;
-                        &:hover{
-                            scale: 1.2;
-                        }
-                        img {
-                            width: 20px;
-                            height: 20px;
-                            object-fit: contain;
-                        }
-                    }
-                }
-
-                .arrowRight {
-                    position: absolute;
-                    top: 0;
-                    right: 0;
-                    width: 4rem;
-                    height: 100%;
-                    @include dFlex();
-                    z-index: 2;
-                    background: linear-gradient(to right, rgba(30, 30, 30, 0) 0%, #000000 100% );
-
-                    button {
-                        background: none;
-                        border: none;
-                        cursor: pointer;
-                        transition: .2s all ease-in-out;
-                        &:hover{
-                            scale: 1.2;
-                        }
-                        img {
-                            width: 20px;
-                            height: 20px;
-                            object-fit: contain;
-                        }
-                    }
-                }
-            }
+          &::-webkit-scrollbar-track {
+            background-color: transparent;
+          }
         }
+
+        .arrowLeft {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 4rem;
+          height: 100%;
+          @include dFlex();
+          z-index: 2;
+          background: linear-gradient(
+            to right,
+            #000000 0%,
+            rgba(30, 30, 30, 0) 100%
+          );
+
+          button {
+            background: none;
+            border: none;
+            cursor: pointer;
+            transition: 0.2s all ease-in-out;
+            &:hover {
+              scale: 1.2;
+            }
+            img {
+              width: 20px;
+              height: 20px;
+              object-fit: contain;
+            }
+          }
+        }
+
+        .arrowRight {
+          position: absolute;
+          top: 0;
+          right: 0;
+          width: 4rem;
+          height: 100%;
+          @include dFlex();
+          z-index: 2;
+          background: linear-gradient(
+            to right,
+            rgba(30, 30, 30, 0) 0%,
+            #000000 100%
+          );
+
+          button {
+            background: none;
+            border: none;
+            cursor: pointer;
+            transition: 0.2s all ease-in-out;
+            &:hover {
+              scale: 1.2;
+            }
+            img {
+              width: 20px;
+              height: 20px;
+              object-fit: contain;
+            }
+          }
+        }
+      }
     }
+  }
 }
