--- a/src/app/landingpage/video-site/video-preview/video-preview.component.scss
+++ b/src/app/landingpage/video-site/video-preview/video-preview.component.scss
@@ -1,91 +1,89 @@
 section {
-    // width: 360px;
-    // height: 240px;
+  width: 100%;
+  height: 100%;
+  max-width: 360px;
+  aspect-ratio: 16/9;
+  min-height: 120px;
+  position: relative;
+  cursor: pointer;
+
+  img {
     width: 100%;
     height: 100%;
-    max-width: 360px;
-    aspect-ratio: 16/9; 
-    min-height: 120px;
-    position: relative;
-    cursor: pointer;
+    object-fit: cover;
+    border-radius: 12px;
+  }
 
-    img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        border-radius: 12px;
-    }
-
-    .descriptionBox {
-        position: absolute;
-        top: 0;
-        width: -webkit-fill-available;
-        height: -webkit-fill-available;
-        background: linear-gradient(to bottom,
-                #202020a3 0%,
-                #202020a3 50%,
-                #20202066 70%,
-                transparent 100%
-            );
-        padding: 16px;
-        transform: translateY(100%);
-        opacity: 0;
-        color: white;
-    }
+  .descriptionBox {
+    position: absolute;
+    top: 0;
+    width: -webkit-fill-available;
+    height: -webkit-fill-available;
+    background: linear-gradient(
+      to bottom,
+      #202020a3 0%,
+      #202020a3 50%,
+      #20202066 70%,
+      transparent 100%
+    );
+    padding: 16px;
+    transform: translateY(100%);
+    opacity: 0;
+    color: white;
+  }
 }
 
-
 .descriptionVisible {
-    animation: slideIn 0.5s linear forwards;
+  animation: slideIn 0.5s linear forwards;
 }
 
 @keyframes slideIn {
-    0% {
-        transform: translateY(100%);
-        opacity: 0;
-    }
+  0% {
+    transform: translateY(100%);
+    opacity: 0;
+  }
 
-    50% {
-        transform: translateY(70%);
-        opacity: 0;
-    }
+  50% {
+    transform: translateY(70%);
+    opacity: 0;
+  }
 
-    100% {
-        transform: translateY(0);
-        opacity: 1;
-        border-radius: 12px;
-    }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+    border-radius: 12px;
+  }
 }
 
 .descriptionHide {
-    animation: slideOut 0.5s linear forwards;
-    height: 0;
-    opacity: 0;
+  animation: slideOut 0.5s linear forwards;
+  height: 0;
+  opacity: 0;
 }
 
 @keyframes slideOut {
-    0% {
-        transform: translateY(0);
-        opacity: 1;
-    }
+  0% {
+    transform: translateY(0);
+    opacity: 1;
+  }
 
-    50% {
-        transform: translateY(30%);
-        opacity: 0;
-    }
+  50% {
+    transform: translateY(30%);
+    opacity: 0;
+  }
 
-    100% {
-        transform: translateY(100%);
-        border-radius: 12px;
-        height: 0; 
-        opacity: 0;
-    }
+  100% {
+    transform: translateY(100%);
+    border-radius: 12px;
+    height: 0;
+    opacity: 0;
+  }
 }
 
-@media (max-width: 1200px){
-    section {
-        .descriptionBox {
-            display: none;
-        }
+@media (max-width: 1200px) {
+  section {
+    .descriptionBox {
+      display: none;
     }
+  }
 }
